--- a/src/views/homepage.pug
+++ b/src/views/homepage.pug
@@ -5,6 +5,9 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         link(rel="stylesheet", href="css/style.css")
+        link(rel="stylesheet", href="css/bootstrap-grid.css")
+        link(rel="stylesheet", href="css/bootstrap-reboot.css")
+        link(rel="stylesheet", href="css/bootstrap.css")
         title Homepage
     body
         h1 This is the test heading for #{siteName}
