--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,4 +1,9 @@
-body
-{
-    background-color: antiquewhite
+.modal-content{
+    background-color: darkcyan;
+}
+.btn-link{
+    color:white;
+}
+.modal-heading h2{
+    color: #ffffff;
 }
