Registration added , Session added, DB connection added

--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -1,3 +1,5 @@
-h1 #{username}
-button(type='submit') Logout
-    a(href="/")
+//  TODO : show navbar
+//  TODO : list all the registered useres
+h1 Username : #{username}
+h2 userId : #{userId}
+a(href="/logout") Logout
