--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -13,6 +13,11 @@ block content
                             .input-group
                                 span.input-group-addon
                                     span.glyphicon.glyphicon-user
+                                input.form-control-filemy-input(type='text',placeholder="Name",id="name",name="name")
+                        .form-group
+                            .input-group
+                                span.input-group-addon
+                                    span.glyphicon.glyphicon-user
                                 input.form-control-filemy-input(type='email',placeholder="Email",id="email",name="email")
                         .form-group
                             .input-group
@@ -24,6 +29,11 @@ block content
                                 span.input-group-addon
                                     span.glyphicon.glyphicon-lock
                                 input.form-control-filemy-inpuy(type="password",placeholder="Password",id="password",name="password")
+                        .form-group
+                            .input-group
+                                span.input-group-addon
+                                    span.glyphicon.glyphicon-lock
+                                input.form-control-filemy-inpuy(type="password",placeholder="Confirm Password",id="cPassword",name="cPassword")
                         .form-group.text-center
                             button.btn.btn-success.btn-lg(type="submit") Register
                             hr
