--- a/src/views/head.pug
+++ b/src/views/head.pug
@@ -3,9 +3,12 @@ head
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title #{title}
+        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css", type="text/css")
         link(rel="stylesheet", href="css/style.css")
         link(rel="stylesheet", href="css/bootstrap-grid.css")
         link(rel="stylesheet", href="css/bootstrap-reboot.css")
         link(rel="stylesheet", href="css/bootstrap.css")
+        script(src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+        crossorigin="anonymous")
         script(src="js/bootstrap.bundle.js")
         script(src="js/bootstrap.js")
