--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -15,15 +15,17 @@ html(lang="en")
                 //  Create first row
                 .row
                     .col.col-sm-9.col-lg-9.col-md-9
-                        h3 Username : #{username}
+                        h3.h3 Username : 
+                            span(id='username') #{username}
                     .col.text-center
                         a(href="/logout") Logout
                 hr
                 //  Create second row
                 .row
                     .col.col-sm-3.col-lg-3.col-md-3.border
-                        .container            
-                            each user in userList
+                        //  Create user list dynamically 
+                        div(id='user-list' class='container')
+                            //each user in userList
                                 if user.username != username
                                     .row
                                         a(href="#")
