cleaned up the routing system and also added controllers

--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -7,7 +7,7 @@ html(lang="en")
     include head.pug
     //  Add socket.io client
     script(src="/socket.io/socket.io.js")
-    script(src="js/main-script.js")
+    script(src="/js/main-script.js")
 
     body
         .container-fluid
