--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -1,5 +1,5 @@
 //  TODO : show navbar
-//  TODO : list all the registered useres
+//  TODO : list all the registered users
 
 <!DOCTYPE html>
 html(lang="en")
@@ -34,7 +34,7 @@ html(lang="en")
                         .container
                             //  Create a row
                             .row
-                                //  Add one coloumn
+                                //  Add one column
                                 .col-sm-12.col-md-12.col-lg-12
                                     //  Add card
                                     .card
@@ -50,9 +50,10 @@ html(lang="en")
                                         //  Add card footer
                                         .card-footer
                                             //  Add row
-                                            .row
+                                            .row.text-center
                                                 // Add input box
-                                                .col-sm-9.col-md-9.col-lg-9
-                                                    input(type="text", name="test")
-                                                .col-sm-3.col-md-3.col-lg-3
-                                                    button(type="submit") Send
+                                                .form
+                                                    .form-group.col-sm-6.col-md-6.col-lg-6.text-center
+                                                        input(type="text", name="test") 
+                                                    .form-group.col-sm-6.col-md-6.col-lg-6.text-center
+                                                        button(type="submit") Send
