--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -15,7 +15,7 @@ html(lang="en")
                 //  Create first row
                 .row
                     .col.col-sm-9.col-lg-9.col-md-9
-                        h3.h3 Username : 
+                        h3 Username : 
                             span(id='username') #{username}
                     .col.text-center
                         a(href="/logout") Logout
